compiler/weave_syntax/tests/data/syntax/Namespace.error
error: Expected '[token:identifier]'
        --> <source>:109:13
         |
     109 |             );
         |             ^
